Fix alignment of button at top of history timeline

--- a/warehouse/static/sass/components/_history-timeline.scss
+++ b/warehouse/static/sass/components/_history-timeline.scss
@@ -1,6 +1,6 @@
-
 .version-history-graphic {
   clear: both;
+  margin-top: 20px;
 }
 
 .history-section {
